<resources>
    <string name="account_imageView_description">点击进入账户管理页面</string>
    <string name="addBillManual_confirm">确认添加</string>
    <string name="addBillManual_cancel">取消</string>
    <string name="addBillType_imageView_description">表示账单类别（支出或收入）的图片</string>
    <string name="addBill_amount_hint">金额...</string>
    <string name="addBill_imageView_description">添加账单，按住语音输入，点击手动输入</string>
    <string name="addBill_note_hint">备注...</string>
    <string name="app_name">Bill Recorder</string>
    <string name="billList_scrollView_description">账单列表，按时间排序，可以滚动查看更多</string>
    <string name="return_button">Return</string>
    <string name="search_imageView_description">点击进入账单查询页面</string>
    <string name="statistics_imageView_description">点击进入数据统计页面</string>
    <string name="test_amount">2000.00</string>
    <string name="test_date">2022-12-07</string>
    <string name="test_note">这是一段备注，尽量长（十五字）</string>
    <string name="test_time">12:34:56</string>
    <string name="speech_recognize_hint">"识别中..."</string>
    <string name="showBillHandleDialog_hint">确定要删除该条账目吗？</string>
</resources>