<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bill1"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/background_gray"
    app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
    app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName">

    <TextView
        android:id="@+id/date"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/text_background_gray"
        android:text="@string/test_date"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/text_background_gray"
        android:text="@string/test_amount"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/text_background_gray"
        android:text="@string/test_note"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>