<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageActivity">

    <Button
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Export"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_gray"
        android:divider="@drawable/divider_horizontal_thick"
        android:orientation="vertical"
        android:showDividers="middle"
        tools:layout_editor_absoluteY="581dp">

        <ScrollView
            android:id="@+id/billList"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:contentDescription="@string/billList_scrollView_description">

            <LinearLayout
                android:id="@+id/billListLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_horizontal_thin"
                android:dividerPadding="20dp"
                android:orientation="vertical"
                android:showDividers="middle" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/manageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_gray"
            android:divider="@drawable/divider_vertical_thin"
            android:dividerPadding="10dp"
            android:orientation="horizontal"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteY="731dp">

            <ImageView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/account_imageView_description"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />

            <ImageView
                android:id="@+id/statistics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/statistics_imageView_description"
                app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/search_imageView_description"
                app:srcCompat="@android:drawable/ic_menu_search"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>