<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider_horizontal_thick"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/showBill"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@color/background_gray"
            android:divider="@drawable/divider_horizontal_thin"
            android:dividerPadding="20dp"
            android:orientation="vertical"
            android:showDividers="middle">

            <include layout="@layout/bill_info" />

            <include layout="@layout/bill_info" />

            <include layout="@layout/bill_info" />

            <include layout="@layout/bill_info" />

        </LinearLayout>

        <ImageView
            android:id="@+id/addBill"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:background="@color/background_gray"
            android:contentDescription="@string/addBill_imageView_description"
            android:visibility="gone"
            app:srcCompat="@android:drawable/ic_menu_add"
            tools:ignore="ImageContrastCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addBillManual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TextView
                android:id="@+id/addBillDate"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="2022/01/02"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/addBillAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addBillTime"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="12:34:56"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/addBillAmount"
                app:layout_constraintEnd_toStartOf="@+id/button"
                app:layout_constraintStart_toEndOf="@+id/addBillDate"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/addBillAmount"
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/addBill_amount_hint"
                android:inputType="numberDecimal"
                android:textColorHint="#78909C"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addBillTime" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addBillNote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addBillAmount">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addBill_note_hint"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/addBillManual_button"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>